--- a/project.html
+++ b/project.html
@@ -1,1 +1,96 @@
-Project
+Projetos
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Gabriele Francine Santos Alves </title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<div class="container">
+
+</div>
+<body>
+    
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html"> Sobre mim <a>
+                </li>
+                <li>
+                    <a href="project.html"> Projetos <a>
+                    </li>
+                    <li>
+                        <a href="contact.html"> Contato <a>
+                        </li>
+        </ul>
+    </nav>
+
+    <header>
+        <div class="center">
+            <img src="./img/335589400_113383881702836_4955442697071165401_n.jpg"</img>
+        </div>
+        <h1> Projetos Desenvolvidos</h1>
+        <h2> Git Hub </h2>
+
+    </header>
+
+    <main>
+        <section>
+            <h3> Listagem de Projetos</h3>
+            <p>
+                Atividade CV Gabriele Francine em Html <br>
+                Tarefa Empresa <br>
+                Sapataria do Oswaldo - Protótipo 1 <br> 
+                Sapataria do Oswaldo - Layout novo <br>
+                Flex Box <br>
+                Site Sapataria <br> 
+                Atividade de Nivelamento - Blog Ford <br>
+                Formulário Sapataria <br>
+                Perfil Profissional - Portifólio Atividade Feriado <br>
+
+             </p>
+        </section>
+
+        <section>
+            <h3> Formação</h3>
+            <p>
+                Iniciei a minha trajetória nos estudos em 2013, onde cursei no centro Universitário Senac Santo Amaro, o curso de auxiliar de escritório. Já em 2017 cursei Técnico em Segurança do Trabalho, pelo Senac Largo Treze, e no mesmo ano cursei inspeção de qualidade voltado para a área da Metalmecânica pelo Senai Suiço Brasileiro. Em 2018 iniciei o curso de graduação no Centro Universitário Senac Santo Amaro, no Bacharelado em Engenharia de Produção, onde cursei por 3 semestres e no ano de 2019, devido a questões de saúde. Precisei trocar de curso, e migrei para Administração de Empresas, onde me formei em Março de 2022, e a mudança de área foi um divisor de águas na minha vida e carreira, pois ao iniciar, estagiei por 2 anos na Ford Motor Company na área de Veículos Comerciais, e após o término do contrato de estágio, eu consegui me consolidar na área administrativa, conseguindo uma vaga de assistente administrativo de vendas na multinacional Coreana Vatech Brasil. 
+
+            </p>
+        </section>
+
+        <section>
+            <h3> Cursos</h3>
+            <p>
+                Auxiliar de escritório - Centro Universitário Senac Santo Amaro -  Concluído em 2013
+                Técnico em Segurança do Trabalho - Senac Largo Treze - Concluído em 2017
+                Inspeção de Qualidade área da Metal- mecânica - Senai Suiço Brasileira -  Concluído em 2017
+                Bacharelado em Engenharia de Produção - Centro Universitário Senac Santo Amaro - Cursei de Março á Junho 2019
+                Bacharelado em Administração de Empresas - Centro Universitário Senac Santo Amaro - concluído em Dezembro de 2022. 
+              
+                Desenvolvedor Front - End - Programa Ford Enter - Senai Ipiranga - Cursando conclusão em Abril de 2024. 
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <a href="https://github.com/gabi45" target="_blank" rek="noopener noreferrer">
+            <img src="./img/download.png"></img>
+            <p> Github</p>
+        </a>
+
+        <a href="https://www.linkedin.com/in/gabriele-francine-226855141/" target="_blank" rek="noopener noreferrer">
+            <img src="./img/LinkedIn_icon.svg.png"></img>
+            <p> linkedln</p>
+        </a>
+
+        <a href="https://www.instagram.com/gabriele_francine/" target="_blank" rek="noopener noreferrer">
+            <img src="./img/1200px-Instagram.svg.png"></img>
+            <p> instagram</p>
+        </a>
+    </footer>
+
+</body>
+</html>
